PROJECT(logic)
SET(LIBRARY_OUTPUT_PATH "${PROJECT_SOURCE_DIR}/../bin")
FILE(GLOB LOGIC_INTERFACE_SELF "${PROJECT_SOURCE_DIR}/src/interface/*.h")
FILE(GLOB LOGIC_INTERFACE_OTHER "${PROJECT_SOURCE_DIR}/interface/*.h")
SET(LOGIC_INTERFACE
	${LOGIC_INTERFACE_SELF}
	${LOGIC_INTERFACE_OTHER}
)
FILE(GLOB PUBLIC "${PROJECT_SOURCE_DIR}/public/*.h")
FILE(GLOB API "${PROJECT_SOURCE_DIR}/API/*.h")

INCLUDE_DIRECTORIES(
    "${PROJECT_SOURCE_DIR}/API"
    "${PROJECT_SOURCE_DIR}/public"
	"${PROJECT_SOURCE_DIR}/interface"
    "${PROJECT_SOURCE_DIR}/src/interface"
    )

FILE(GLOB LOGIC_DIRS "${PROJECT_SOURCE_DIR}/src/*")
FOREACH(LOGIC_DIR ${LOGIC_DIRS})
    message("当前变量是：${LOGIC_DIR}")
	string(COMPARE NOTEQUAL ${LOGIC_DIR} "${PROJECT_SOURCE_DIR}/src/template" NOT_TEMP)
	string(COMPARE NOTEQUAL ${LOGIC_DIR} "${PROJECT_SOURCE_DIR}/src/create.exe" NOT_CREATE_EXE)
	string(COMPARE NOTEQUAL ${LOGIC_DIR} "${PROJECT_SOURCE_DIR}/src/create.hs" NOT_CREATE_HS)
	string(COMPARE NOTEQUAL ${LOGIC_DIR} "${PROJECT_SOURCE_DIR}/src/interface" NOT_CREATE_INTERFACE)
	IF (NOT_TEMP AND NOT_CREATE_EXE AND NOT_CREATE_HS AND NOT_CREATE_INTERFACE)
		ADD_SUBDIRECTORY(${LOGIC_DIR})
	ENDIF()
ENDFOREACH()
