SET(LIBRARY_OUTPUT_PATH "${PROJECT_SOURCE_DIR}/bin")
FILE(GLOB LOGIC_INTERFACE "${PROJECT_SOURCE_DIR}/src/logic/interface/*.h")

FILE(GLOB LOGIC_DIRS "${PROJECT_SOURCE_DIR}/src/logic/*")
FOREACH(LOGIC_DIR ${LOGIC_DIRS})
    message("当前变量是：${LOGIC_DIR}")
	string(COMPARE NOTEQUAL ${LOGIC_DIR} "${PROJECT_SOURCE_DIR}/src/logic/template" NOT_TEMP)
	string(COMPARE NOTEQUAL ${LOGIC_DIR} "${PROJECT_SOURCE_DIR}/src/logic/CMakeLists.txt" NOT_SELF)
	string(COMPARE NOTEQUAL ${LOGIC_DIR} "${PROJECT_SOURCE_DIR}/src/logic/create.exe" NOT_CREATE_EXE)
	string(COMPARE NOTEQUAL ${LOGIC_DIR} "${PROJECT_SOURCE_DIR}/src/logic/create.hs" NOT_CREATE_HS)
	string(COMPARE NOTEQUAL ${LOGIC_DIR} "${PROJECT_SOURCE_DIR}/src/logic/interface" NOT_CREATE_INTERFACE)
	IF (NOT_TEMP AND NOT_SELF AND NOT_CREATE_EXE AND NOT_CREATE_HS AND NOT_CREATE_INTERFACE)
		ADD_SUBDIRECTORY(${LOGIC_DIR})
	ENDIF()
ENDFOREACH()
